--- a/working_dir/final_report.tex
+++ b/working_dir/final_report.tex
@@ -157,7 +157,7 @@ We designed a deep feedforward neural network with 10 layers, each containing 30
 
 \noindent
 \textbf{ANN B}:\\
-After exploratory data analysis, we implemented a binary classifier for diabetes risk. We split the data 80-20 into train and test sets, and constructed a six-layer feedforward Artificial Neural Network with Tensorflow/Keras. The hidden layers utilized the ReLU activation function, and we tried different L1 and L2 regularization weights to prevent overfitting of the model. The output layer uses the default sigmoid function and binary cross-entropy loss to improve the binary classifier. We implemented a brute-force grid search with five hyperparameters to hyperparameter tune the ANN, an SGD learning rate and momentum, a hidden layer with either 16 or 32 neurons, and L1/L2 regularization. We also ran this over 50 epochs and a batch size of 64.
+After exploratory data analysis, we implemented a binary classifier for diabetes risk. We split the data 80-20 into train and test sets, and constructed an eleven-layer feedforward Artificial Neural Network with Tensorflow/Keras. The hidden layers utilized the ReLU activation function, and we tried different L1 and L2 regularization weights to prevent overfitting of the model. The output layer uses the default sigmoid function and binary cross-entropy loss to improve the binary classifier. We implemented a brute-force grid search with five hyperparameters to hyperparameter tune the ANN, an SGD learning rate and momentum, a hidden layer with either 16 or 32 neurons, and L1/L2 regularization. We also ran this over 50 epochs and a batch size of 64.
 This brute force grid search method generalized our eleven-layer network’s hyperparameters and provided a reproducible model from the root BRFSS features to a tuned diabetes‐risk predictor.\\ 
 
 
@@ -166,8 +166,8 @@ This brute force grid search method generalized our eleven-layer network’s hyp
 Implemented a supervised machine learning pipeline to predict diabetes using a feedforward neural network with hyperparameter tuning. The process begins with loading and preprocessing a dataset, where the target variable is extracted and categorical features are one-hot encoded. The data is then split into training and testing sets, followed by standardization using StandardScalar. A custom model-building function is defined using KerasTuner, allowing for dynamic architecture adjustments, including varying the number of layers, units per layer, and learning rate. A RandomSearch tuner is employed to identify the best model configuration by optimizing for validation accuracy. Early stopping is incorporated to prevent overfitting. The best model is re-trained and evaluated on the test set, reporting both accuracy and optimal hyperparameters. Finally, the training history, confusion matrix, and other parameters are visualized to show trends in loss and accuracy over epochs, providing insight into the model's learning behavior and results.\\
 
 \noindent
-\textbf{Bayesian Network (BN)}:\
-To model probabilistic dependencies among features and predict diabetes risk, we constructed a Bayesian Network using the Hill Climb Search algorithm for structure learning. The K2 scoring metric guided the search for the optimal network topology, balancing model complexity and data fit. We applied Variable Elimination for efficient inference, allowing us to compute conditional probabilities and make probabilistic predictions. To simplify the model and improve generalizability, we reduced the feature space to 13 key attributes based on prior analysis. This approach enabled interpretable reasoning under uncertainty while maintaining computational tractability.
+\textbf{Bayesian Network (BN)}:\\
+To model probabilistic dependencies among features and predict diabetes risk, we constructed a Bayesian Network using the Hill Climb Search algorithm for structure learning. The K2 scoring metric guided the search for the optimal network topology, balancing model complexity and data fit. We applied Variable Elimination for efficient inference, allowing us to compute conditional probabilities and make probabilistic predictions. To simplify the model and improve generalizability, we reduced the feature space to 13 key attributes based on prior analysis. This approach enabled interpretable reasoning under uncertainty while maintaining computational tractability.\\
 
 \noindent
 \textbf{Random Forest}:\\
@@ -179,82 +179,30 @@ The XGBoost model was implemented using XGBClassifier. We configured the objecti
 
 \noindent
 \textbf{LightGBM}:\\
-We used the LGBMClassifier to implement the LightGBM model, setting the objective to 'binary'. The parameter class\_weight='balanced' ensured that the model addressed class imbalance effectively. We used 100 estimators and a fixed random\_state=42 for reproducibility. LightGBM’s ability to handle large numbers of features and fast inference made it particularly suitable for our one-hot encoded dataset. As with the other models, evaluation was conducted through 5-fold cross-validation, followed by a final test set evaluation to confirm model performance and generalization.
+We used the LGBMClassifier to implement the LightGBM model, setting the objective to 'binary'. The parameter class\_weight='balanced' ensured that the model addressed class imbalance effectively. We used 100 estimators and a fixed random\_state=42 for reproducibility. LightGBM’s ability to handle large numbers of features and fast inference made it particularly suitable for our one-hot encoded dataset. As with the other models, the evaluation was conducted by five-fold cross-validation, followed by a final evaluation of the test set to confirm the performance and generalization of the model.
 
-\vspace{1em}
+\vspace{2em}
 
-\textbf{Models and Hyperparameters}:
+\noindent \textbf{Performance Report:}\\
+To better understand the performance and practical suitability of each model, we conducted a comprehensive evaluation across both quantitative and qualitative criteria. This involved analyzing core metrics such as precision, recall, and F1 score, alongside factors like interpretability, scalability, and inference efficiency. The following figure summarizes our findings.
 
-\vspace{-10px}
+\clearpage
 
-\begin{table}[htbp]
+
+\begin{figure*}[t]
   \centering
-    \caption{Models and their key hyperparameters used in evaluation and analysis.}
-  \renewcommand{\arraystretch}{1.3}
-  \begin{tabular}{|p{3.5cm}|p{3cm}|}
-    \hline
-    \textbf{Model} & \textbf{Key Hyperparameters} \\
-    \hline
-    Logistic Regression (L2) & Solver: 'lbfgs', Penalty: 'L2', C = 1.0, AIC = 5123.826 \\
-    \hline
-    Logistic Regression (L1) & Solver: 'liblinear', Penalty: 'L1', C = 1.0, AIC = 5113.101 \\
-    \hline
-    ANN Model A & 10 layers with 30 neurons/layer, Activation: ReLU, Sigmoid output, Regularization: L1L2(0.001), SGD+momentum(0.9), LR=0.01, Epochs=100, Batch=64, Loss: binary\_crossentropy \\
-    \hline
-    ANN Model B & 6 layers, 16 neurons/layer, Activation: ReLU, Sigmoid output, Regularization: L1L2(0.0), SGD+momentum(0.9), LR=0.01, Epochs=50, Batch=64, Loss: binary\_crossentropy \\
-    \hline
-    ANN T (Tuned) & Layers: [128, 64, 64, 16, 128, 64], ReLU + Sigmoid, Optimizer: Adam, LR=0.0062, Epochs=30, Batch=64 \\
-    \hline
-    Bayesian Network & HillClimbSearch, Scoring: K2, Inference: Variable Elimination \\
-    \hline
-    Random Forest & class\_weight='balanced', random\_state=42 \\
-    \hline
-    XGBoost & objective='binary:logistic', eval\_metric='logloss', tree\_method='hist', random\_state=42 \\
-    \hline
-    LightGBM & objective='binary', class\_weight='balanced', n\_estimators=100, random\_state=42 \\
-    \hline
-  \end{tabular}
-  \label{tab:model_params}
-\end{table}
-
-
-\vspace{1em}
-
-\begin{figure*}[htbp]
-  \centering
-  \includegraphics[width=\textwidth]{image.png}
-  \caption{Performance comparison of Precision, Recall, F1 Score (top) and qualitative model evaluation (bottom).}
-  \label{fig:combined_perf_summary}
+  \includegraphics[width=\textwidth]{everything.png}
 \end{figure*}
+
+
+
+
+
+
 
 
 \vspace{4em}
 \noindent \textbf{Analysis and Comparison:}\\
-
-\vspace{4em}
-\begin{table}[H]
-\caption{Evaluation metrics and testing time for each model.}
-\centering
-\label{tab:performance_metrics}
-\renewcommand{\arraystretch}{1.2}
-\begin{tabular}{|l|c|c|c|c|c|}
-\hline
-\textbf{Model} & \textbf{Acc.} & \textbf{Prec.} & \textbf{Rec.} & \textbf{F1} & \textbf{Time (s)} \\
-\hline
-LogReg (L2) & 0.9100 & 0.9100 & 0.9100 & 0.9100 & $<$0.003 \\
-LogReg (L1) & 0.9100 & 0.9100 & 0.9100 & 0.9100 & $<$0.003 \\
-BN          & 0.9100 & 0.9100 & 0.9100 & 0.9100 & 7.754 \\
-ANN A       & 0.9107 & 0.9213 & 0.9111 & 0.9027 & 9.714 \\
-ANN B       & 0.9098 & 0.9031 & 0.9180 & 0.9105 & 9.524 \\
-ANN Tuned   & 0.9087 & 0.9261 & 0.9104 & 0.9073 & 9.298 \\
-RF          & 0.8980 & 0.8977 & 0.8982 & 0.8981 & 3.661 \\
-XGB         & 0.9047 & 0.9054 & 0.9047 & 0.9047 & 1.634 \\
-LGBM        & 0.9067 & 0.9072 & 0.9067 & 0.9067 & 0.630 \\
-\hline
-\end{tabular}
-\end{table}
-
-
 
 The comparison table and accompanying bar plots provide a structured evaluation of several machine learning models—Logistic Regression, various Artificial Neural Networks (ANN A, ANN B, ANN T), Bayesian Network (BN), and Tree-Based models (Random Forest, XGBoost, LightGBM)—across key performance goals. These goals include maximizing F1 score and overall accuracy, minimizing false negatives (FN), achieving fast inference time, maintaining interpretability, ensuring model simplicity, handling noise and non-linearity, performing well with fewer features, scalability to large datasets, and suitability for FN-critical medical applications.
 
@@ -262,7 +210,7 @@ The table highlights which models fully meet each goal (YES), do not meet it (NO
 
 While Logistic Regression (L2) achieved the highest overall scores across all key quantitative metrics (Accuracy, Precision, Recall, and F1 Score: 0.9100), it did not achieve the lowest false negative rate. ANN Model A recorded the lowest false negative count (627), which is a crucial factor in medical applications where failing to identify positive cases can lead to delayed interventions or worsened outcomes.
 
-Despite this limitation, Logistic Regression (L2) remains the most suitable model for initial deployment due to its:
+Logistic Regression (L2) is still a suitable model for initial deployment due to its:
 \begin{itemize}
 \item Consistently top-tier performance across all metrics
 \item Real-time inference speed (sub-millisecond)
@@ -270,10 +218,10 @@ Despite this limitation, Logistic Regression (L2) remains the most suitable mode
 \item High recall and overall robustness across diverse patient profiles
 \end{itemize}
 
-Given the medical context, where both recall and model transparency are critical for clinical trust and adoption, Logistic Regression (L2) provides a reliable and practical baseline solution. Nonetheless, ANN Model A’s superior ability to reduce false negatives suggests that it could be highly valuable as part of a two-stage screening pipeline—where a simple logistic regression first flags potential cases, and the ANN then provides more refined risk stratification. Future work could explore such hybrid approaches to maximize both accuracy and clinical utility.
+Given the medical context, where both recall and model transparency are critical for clinical trust and adoption, Logistic Regression (L2) provides a reliable and practical baseline solution. However, ANN Model A’s superior ability to reduce false negatives suggests that it could be highly valuable as part of a two-stage screening pipeline—where a simple logistic regression first flags potential cases, and the ANN then provides more refined risk stratification. Moreover, despite Logistic Regression (L2) having faster classification times and simplicity than ANN, given that our features are long term demographic, health and lifestyle characteristics of a user, these factors aren't a significant when it comes to choosing the best model. Hence, ANN A was selected as the best model due to the least false negatives, since this is a medical task.  Future work could explore hybrid approaches to maximize both accuracy and clinical simplicity.
 
 \section{Conclusion and Discussion}
-This research project explored how machine learning can be leveraged for diabetes prediction using 21 health-related features from the CDC's Diabetes Health Indicators dataset. Using fundamental data cleaning, EDA, and feature selection methods, we were able to make the dataset best suited for our project. We approached the problem as a binary classification task, addressing key challenges like class imbalance, non-linear feature relationships, and feature skewness. After tuning a six-layer neural network, our model consistently achieved around 91 percent accuracy, with balanced precision and recall across both diabetic and non-diabetic classes. Our motivation for selecting this topic stems from the increasing global burden of diabetes and the lack of early, accessible diagnostic tools, especially in under-resourced regions. The model provides a foundation for automated screening tools that could be deployed in mobile apps or integrated into wearable devices, making preventive healthcare more proactive and personalized. \\
+This research project explored how machine learning can be leveraged for diabetes prediction using 21 health-related features from the CDC's Diabetes Health Indicators dataset. Using fundamental data cleaning, EDA, and feature selection methods, we were able to make the dataset best suited for our project. We approached the problem as a binary classification task, addressing key challenges like class imbalance, non-linear feature relationships, and feature skewness. After tuning an eleven-layer neural network, our model consistently achieved around 91 percent accuracy, with balanced precision and recall across both diabetic and non-diabetic classes. Our motivation for selecting this topic stems from the increasing global burden of diabetes and the lack of early, accessible diagnostic tools, especially in under-resourced regions. The model provides a foundation for automated screening tools that could be deployed in mobile apps or integrated into wearable devices, making preventive healthcare more proactive and personalized. \\
 
 This project exemplifies how AI can serve as a catalyst for innovation in the healthcare sector. By analyzing behavioral, demographic, and physiological data, the model demonstrates how early warning systems can be built to reduce the risk of undiagnosed or misdiagnosed diabetes. In rural or underserved communities, such technology can help bridge the gap in medical access, allowing for earlier interventions and better health outcomes. \\
 
